fix vip visible

--- a/src/components/SongList/SongList.module.scss
+++ b/src/components/SongList/SongList.module.scss
@@ -73,5 +73,5 @@
 .vip {
     padding: 0 4px;
     font-size: 0.7rem;
-    top: -60%;
+    top: -115%;
 }
